# midi-controller-rs

./: Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
public/: tailwind.css
src/: components.rs  main.rs  midi.rs  routes.rs
src/components/: dashboard.rs  data.rs  preset.rs
src/midi/: channel.rs  control_change.rs  fractal.rs  midi_block.rs  midi_message.rs  program_change.rs
