[package]
name = "fractal-midi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
midir = "0.9.1"

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
enum-iterator = "1.5.0"
enum-display = "0.1.3"
num = "0.4.1"
dioxus-logger = "0.4.1"
dioxus-router = "0.4.3"
gloo-storage = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
